--- a/LibraryApp/LibraryApp.csproj
+++ b/LibraryApp/LibraryApp.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <Folder Include="Model\" />
     <Folder Include="Pages\BookList\" />
+    <Folder Include="Controllers\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.3" />
